# neohtop

./: .gitignore  LICENSE  README.md  build-universal.sh  bun.lockb  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-check.yml  format-check.yml  linux-aarch64-nightly.yml  linux-nightly.yml  linux-x86_64-nightly.yml  macos-nightly.yml  test-release.yml  windows-nightly.yml
docs/: index.html  main.js  styles.css
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs  system.rs  types.rs  window.rs
src-tauri/src/monitoring/: mod.rs  process_monitor.rs  system_monitor.rs  types.rs
src-tauri/src/ui/: mod.rs  window.rs
src/lib/components/: AppInfo.svelte  KillProcessModal.svelte  Modal.svelte  ProcessDetailsModal.svelte  ProcessTable.svelte  StatsBar.svelte  ThemeSwitcher.svelte  TitleBar.svelte  ToolBar.svelte  index.ts
src/lib/components/modals/: KillProcessModal.svelte  Modal.svelte  ProcessDetailsModal.svelte  index.ts
src/lib/components/process/: ActionButtons.svelte  ProcessIcon.svelte  ProcessRow.svelte  ProcessTable.svelte  TableHeader.svelte  index.ts
src/lib/components/process/cells/: ProcessCell.svelte
src/lib/components/stats/: CpuPanel.svelte  MemoryPanel.svelte  NetworkPanel.svelte  PanelHeader.svelte  ProgressBar.svelte  StatItem.svelte  StatPanel.svelte  StatsBar.svelte  StoragePanel.svelte  SystemPanel.svelte  index.ts
src/lib/components/toolbar/: ColumnToggle.svelte  PaginationControls.svelte  RefreshControls.svelte  SearchBox.svelte  StatusFilter.svelte  ToolBar.svelte  index.ts
src/lib/constants/: index.ts  toolbar.ts
src/lib/definitions/: columns.ts  index.ts  settings.ts  themes.ts
src/lib/stores/: config.ts  index.ts  processes.ts  settings.ts  theme.ts
src/lib/styles/: index.ts
src/lib/types/: config.ts  index.ts  toolbar.ts
src/lib/utils/: index.ts  processStatus.ts
src/routes/: +page.svelte
