[package]
name = "macos-task-manager"
version = "1.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
sysinfo = "0.29.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"            # Strip expensive panic clean-up logic
codegen-units = 1          # Compile crates one after another so the compiler can optimize better
lto = "fat"                # More aggressive link-time optimization
opt-level = 3              # Optimize for maximum performance
strip = true               # Remove debug symbols
incremental = false         # Disable incremental compilation
