[package]
name = "macos-task-manager"
version = "1.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
sysinfo = "0.29.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"            # Strip expensive panic clean-up logic
codegen-units = 1          # Compile crates one after another so the compiler can optimize better
lto = "fat"                # More aggressive link-time optimization
opt-level = 3              # Optimize for maximum performance
strip = true               # Remove debug symbols
incremental = false         # Disable incremental compilation
