[package]
name = "neohtop"
version = "1.1.1"
description = "A cross-platform system monitor"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api"] }
sysinfo = "0.29.0"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
window-vibrancy = "0.5.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"            # Strip expensive panic clean-up logic
codegen-units = 1          # Compile crates one after another so the compiler can optimize better
lto = "fat"                # More aggressive link-time optimization
opt-level = 3              # Optimize for maximum performance
strip = true               # Remove debug symbols
incremental = false         # Disable incremental compilation
